# ceia-final-project

./: README.md  pyproject.toml
ceia_final_project/: __init__.py
ceia_final_project/constants/: __init__.py  constants.py
ceia_final_project/datasets/: __init__.py  argentina_sentinel.py
ceia_final_project/inference/: __init__.py  predictor.py  segmenter.py
ceia_final_project/models/: __init__.py  ducknet.py
ceia_final_project/modules/: __init__.py  segmentation_module.py
ceia_final_project/transforms/: __init__.py  segmentation_transform.py
notebooks/: Entrenamiento.ipynb  Evaluación con métricas.ipynb  Evaluación visual.ipynb  Prueba imágenes.ipynb  Segmentación inicial con SamGeo.ipynb  Segmentador.ipynb  Stats Dataset.ipynb
