[project]
name = "ceia-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Cajachuán",email = "kevincajachuan@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'numpy==1.26.4',
    'torch>=1.8.0',
    'torchvision>=0.9.0',
    'lightning==2.5.1',
    'segmentation-models-pytorch==0.4.0',
    'monai==1.4.0',
    'fastai==2.7.19'
]

[tool.poetry]
packages = [{include = "ceia_final_project", from = "src"}]

[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[tool.setuptools.dynamic]
version = {attr = 'ceia_final_project.__version__.__version__'}

[tool.setuptools.packages.find]
include = ['ceia_final_project*']